<resources>
    <string name="app_name">Huddl</string>
    <string name="huddl" translatable="true">Huddl</string>
    <string name="huddl_tagline" translatable="true">Monitize your influence and engage with your fans!</string>
    <string name="facebook_app_id" translatable="false">1516309635372254</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1516309635372254</string>


    <string name="client_id" translatable="false">309886950891112</string>
    <string name="callback_url" translatable="false">https://httpstat.us/200</string>
    <string name="base_url" translatable="false">https://api.instagram.com/</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home_menu_title" translatable="false">Home</string>
    <string name="profile_menu_title" translatable="false">Profile</string>
    <string name="revenue_menu_item" translatable="false">Revenue</string>

    <!--    <string translatable="false" name="facebook_app_id">1516309635372254</string>-->
    <!--    <string translatable="false" name="fb_login_protocol_scheme">fb1516309635372254</string>-->

    <string name="hint_user_id" translatable="false">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">abc@gmail.com</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="get_started_title">Get started using mobile number</string>
    <string name="connect_to_instagram">Connect to Instagram</string>
    <string name="get_otp">GET OTP</string>
    <string name="verify_number">Verify Number</string>
    <string name="otp_sent_to">OTP sent to : %s</string>
    <string name="resend_otp_in">Resend OTP : %s</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="create_profile">Create Profile</string>
    <string name="basic_details">Basic Details</string>
    <string name="enter_name">Enter Name</string>
    <string name="what_s_your_name">What’s your name?</string>
    <string name="bio">Bio</string>
    <string name="short_bio_here">Short bio here</string>
    <string name="category">Category</string>
    <string name="select_cat">Select category</string>
    <string name="email">Email</string>
    <string name="hint_phone">+91 - 9988 8877 32</string>
    <string name="mobile_number">Mobile number</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="huddl_link_hint">Huddl link Hint</string>
    <string name="one_on_one_vc">1-on-1 video call</string>
    <string name="setup">Set Up</string>
    <string name="my_links">My links</string>
    <string name="add_your_social_media_links_or_other_custom_links">Add your social media links or other custom links</string>
    <string name="upload_photos_to_gain_57_more_followers_you_can_upload_upto_three_videos_images_at_a_time">Upload photos to gain 57% more followers. You can upload upto three videos/images at a time.</string>
    <string name="add_images_amp_videos">Add images &amp; videos</string>
    <string name="import_from">Import from</string>
    <string name="account_holder_s_name">ACCOUNT HOLDER’S NAME</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="ifsc">IFSC</string>
    <string name="bank_name">BANK NAME</string>
    <string name="revenue">Revenue</string>
    <string name="next">Next</string>
</resources>