<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:padding="@dimen/standard_margin"
    tools:context=".ui.auth.CreateProfile">

<!--    <TextView-->
<!--        android:id="@+id/backArrow"-->
<!--        style="@style/MainTitle.16.Huddl"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        android:text="@string/create_profile"/>-->

    <TextView
        android:id="@+id/createProfileTitleTv"
        style="@style/MainTitle.16.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_back_arrow"
        android:drawablePadding="@dimen/standard_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/create_profile"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createProfileTitleTv">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/basicDetailsTitleTv"
        style="@style/Body.14.Sec.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/app_layout_margin_40"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/basic_details"/>

    <TextView
        android:id="@+id/nameTitleTv"
        style="@style/Body.14.Huddl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/basicDetailsTitleTv"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/what_s_your_name"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameInputEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Body.14.Sec.Huddl"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        app:layout_constraintTop_toBottomOf="@id/nameTitleTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorOnSurface"
        android:alpha="0.6"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        />

    <TextView
        android:id="@+id/bioTitleTv"
        style="@style/Body.14.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameInputEt"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/bio"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/bioInputEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Body.14.Sec.Huddl"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        app:layout_constraintTop_toBottomOf="@id/bioTitleTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorOnSurface"
        android:alpha="0.6"
        android:inputType="textPersonName"
        android:hint="@string/short_bio_here"
        />

    <TextView
        android:id="@+id/categoryTitleTv"
        style="@style/Body.14.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bioInputEt"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/category"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/selCatSpinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/categoryTitleTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        android:hint="@string/select_cat">

    <AutoCompleteTextView
        android:id="@+id/selcatTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/emailTitleTv"
        style="@style/Body.14.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selCatSpinner"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/email"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailInputEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Body.14.Sec.Huddl"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        app:layout_constraintTop_toBottomOf="@id/emailTitleTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorOnSurface"
        android:alpha="0.6"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        />

    <TextView
        android:id="@+id/mobileNoTitleTv"
        style="@style/Body.14.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailInputEt"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/mobile_number"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mobileInputEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Body.14.Sec.Huddl"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        app:layout_constraintTop_toBottomOf="@id/mobileNoTitleTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorOnSurface"
        android:alpha="0.6"
        android:inputType="phone"
        android:hint="@string/hint_phone"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


<com.google.android.material.button.MaterialButton
        android:id="@+id/connectToInstaTv"
        style="@style/App.Theme.Button.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_instagram"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingLeft="@dimen/app_layout_margin_top_20"
        android:paddingStart="@dimen/app_layout_margin_top_20"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        android:paddingEnd="@dimen/app_layout_margin_top_20"
        android:paddingRight="@dimen/app_layout_margin_top_20"
        android:drawablePadding="@dimen/app_layout_margin_top_20"
        android:text="@string/connect_to_instagram" />



</androidx.constraintlayout.widget.ConstraintLayout>