<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.auth.OtpVerification">

    <TextView
        android:id="@+id/verifyOtpTitleTv"
        style="@style/Body.14.Sec.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3" />

    <TextView
        android:id="@+id/OtpSentMobTitleTv"
        style="@style/Body.16.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_layout_margin_top"
        android:text="@string/otp_sent_to"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verifyOtpTitleTv" />

    <TextView
        android:id="@+id/resendOtpinTimeTv"
        style="@style/Body.14.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/resend_otp_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/OtpSentMobTitleTv" />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        android:textColor="#ffffff"
        app:bar_enabled="true"
        app:bar_height="2dp"
        android:alpha=".9"
        app:height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resendOtpinTimeTv"
        app:length="6"
        app:otp_text_size="24dp"
        app:width="40dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verify_otp"
        style="@style/App.Theme.Button.Red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:text="@string/verify_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>