<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/app_layout_margin"
    tools:context=".ui.main.revenue.BankDetailsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bankDetailsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/accHolderNameTV"
                style="@style/Body.12.Huddl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".8"
                android:text="@string/account_holder_s_name" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/accholderNameEt"
                style="@style/Body.18.Huddl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_layout_margin_top_20"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTitleTv" />

            <TextView
                android:id="@+id/accNumTV"
                style="@style/Body.12.Huddl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_layout_margin_top_20"
                android:alpha=".8"
                android:text="@string/account_number" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/accNumEt"
                style="@style/Body.18.Huddl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_layout_margin_top_20"
                android:hint="@string/enter_name"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTitleTv" />

            <TextView
                android:id="@+id/ifscCodeTv"
                style="@style/Body.12.Huddl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_layout_margin_top_20"
                android:alpha=".8"
                android:text="@string/ifsc" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ifscCodeEt"
                style="@style/Body.18.Huddl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_layout_margin_top_20"
                android:hint="@string/enter_name"
                android:inputType="text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTitleTv" />

            <TextView
                android:id="@+id/bankNameTV"
                style="@style/Body.12.Huddl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_layout_margin_top_20"
                android:alpha=".8"
                android:text="@string/bank_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bankNameEt"
                style="@style/Body.18.Huddl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_layout_margin_top_20"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTitleTv" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>