<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/enterMobileRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:layout_margin="@dimen/app_layout_margin">

    <TextView
        android:id="@+id/huddlTitleTv"
        style="@style/Title.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textFontWeight="1000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/huddlTagLineDesc"
        style="@style/SubTitle.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_layout_margin_top"
        android:paddingRight="50dp"
        android:text="@string/huddl_tagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/huddlTitleTv" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mobileInputCV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintBottom_toTopOf="@id/termsNConditionTv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/huddlTagLineDesc"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/getStartedMobNoTv"
                style="@style/Body.18.Huddl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/standard_margin"
                android:text="@string/get_started_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorOnSurface"
                android:alpha="0.6"
                android:inputType="phone"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginTop="@dimen/app_layout_margin_top"
                android:hint="0000000000"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                style="@style/App.Theme.Button.Red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:text="@string/get_otp" />
        </LinearLayout>


        <!--        <androidx.appcompat.widget.AppCompatTextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:gravity="center"-->
        <!--            android:text="@string/card_with_rounded_corners"-->
        <!--            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />-->

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/termsNConditionTv"
        style="@style/Body.Huddl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_layout_margin_top"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="50dp"
        android:text="@string/huddl_tagline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobileInputCV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>