<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/app_layout_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.profile.AddImagesVideosProfileFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/addPhotosVieonavBar"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <ImageView
        android:id="@+id/backArrownavIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_back_arrow"
        />

    <TextView
        android:id="@+id/addimagesVideoTitileNavTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MainTitle.16.Huddl"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/backArrownavIV"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha=".9"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/standard_margin"
        android:text="@string/add_images_amp_videos"/>

</androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imagesPreviewConstainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginVertical="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@id/addPhotosVieonavBar">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Body.14.Huddl"
        android:alpha=".6"
        android:text="@string/upload_photos_to_gain_57_more_followers_you_can_upload_upto_three_videos_images_at_a_time"
        />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/previewCard1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:layout_marginVertical="@dimen/app_layout_margin_40"
            app:layout_constraintTop_toBottomOf="@id/titleTV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/previewCard2"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/previewCard2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/titleTV"
            app:layout_constraintLeft_toRightOf="@id/previewCard1"
            app:layout_constraintRight_toLeftOf="@id/previewCard3"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:layout_marginVertical="@dimen/app_layout_margin_40"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/previewCard3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:layout_marginVertical="@dimen/app_layout_margin_40"
            app:layout_constraintTop_toBottomOf="@id/titleTV"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/previewCard2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2sdp"
        android:background="@color/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/imagesPreviewConstainer"
        android:layout_marginTop="@dimen/app_layout_margin_40"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/importImagesContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/app_layout_margin_top_20"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/app_layout_margin_60"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/importFromTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/MainTitle.16.Huddl"
            android:alpha=".7"
            android:text="@string/import_from"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/importImagesRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/importFromTV"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/app_layout_margin_top_20"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitImagesBtn"
        style="@style/App.Theme.Button.Red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>